fix: change gradient, increase gaps, make text readable

--- a/styles/blogs.module.css
+++ b/styles/blogs.module.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  color: black;
+  color: var(--color-black);
 }
 
 .blog:hover {
@@ -31,7 +31,7 @@
 
 .blog_title {
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 600;
   margin: 1rem 0 0.4rem 0;
 }
 
