--- a/styles/global.css
+++ b/styles/global.css
@@ -13,13 +13,14 @@ a {
 body {
   overflow-x: hidden;
   text-align: left;
-  background-color: white;
-  color: white;
+  background-color: var(--color-white);
+  color: var(--color-white);
 }
 
 :root {
   --color-white: #fff;
   --color-black: #000;
+  --color-placeholder: #525252;
   --color-pink-100: #f4d6ff;
   --color-pink-200: #c9cbff;
   --color-gray-100: #a6a6a6;
@@ -27,25 +28,25 @@ body {
 }
 
 ::-webkit-input-placeholder {
-  color: #525252;
+  color: var(--color-placeholder);
   font-size: 1.1rem;
   font-weight: 600;
 }
 
 :-ms-input-placeholder {
-  color: #525252;
+  color: var(--color-placeholder);
   font-size: 1.1rem;
   font-weight: 600;
 }
 
 ::-moz-placeholder {
-  color: #525252;
+  color: var(--color-placeholder);
   font-size: 1.1rem;
   font-weight: 600;
 }
 
 ::placeholder {
-  color: #525252;
+  color: var(--color-placeholder);
   font-size: 1.1rem;
   font-weight: 600;
 }
