--- a/styles/prod.module.css
+++ b/styles/prod.module.css
@@ -10,7 +10,7 @@
 
 .products {
   padding: 1rem;
-  gap: 2rem;
+  gap: 4rem;
 }
 
 .title {
@@ -20,7 +20,7 @@
 
 .product {
   display: flex;
-  gap: 5rem;
+  gap: 3rem;
 }
 
 .product:nth-child(2n) {
@@ -40,13 +40,13 @@
 
 .tags {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.8rem;
 }
 
 .tag {
   background-color: var(--color-pink-100);
   font-size: 0.8rem;
-  font-weight: 800;
+  font-weight: 700;
   border: none;
   padding: 3px 5px;
   display: flex;
@@ -104,6 +104,7 @@
 
   .tags {
     gap: 1.2rem;
+    margin-left: 10px;
   }
 
   .head {
@@ -121,6 +122,10 @@
     margin: 0 auto;
   }
 
+  .tags {
+    gap: 1.5rem;
+  }
+
   .product_text {
     transform: translateY(1rem);
   }
@@ -136,6 +141,12 @@
   .product_img {
     width: 40vw;
     height: 18.67vw;
+  }
+}
+
+@media screen and (min-width: 2100px) {
+  .prod_wrapper {
+    max-width: 1450px;
   }
 }
 
